# iot_framework

./: Cargo.toml
src/: lib.rs  main.rs
src/core/: mod.rs  runtime.rs  types.rs
src/core/traits/: sensor.rs
src/devices/actuators/: dummy.rs
src/devices/sensors/: mod.rs  rain.rs  temperature.rs
src/drivers/: gpio.rs
src/network/: console.rs
