[package]
name = "iot_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rumqttc = "0.23"
rand = "0.8"
tokio = { version = "1.47.1", features = ["full"] }
dht-embedded = "0.4"
thiserror = "1.0"
rppal = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.17"
gpio-cdev = "0.5"
